// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TelephoneField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <div
        class="sc-lmgQde iscgnI"
      >
        <div
          class="sc-bCwgka dcOhHZ"
        >
          <span
            class="sc-iwaifL gUBSfc"
          >
            +48
          </span>
        </div>
        <input
          class="sc-fnVYJo kWrnkL"
          id="testId"
          name="telephone"
          placeholder="Numer telefonu"
          prefix="+48"
          style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
          type="tel"
          value="3232a"
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        Podany numer telefonu jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<TelephoneField /> matches snapshot 1`] = `
<input
  class="sc-fnVYJo gOUwpW"
  id="testId"
  name="telephone"
  placeholder="Numer telefonu"
  prefix="+48"
  style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
  type="tel"
  value=""
/>
`;

exports[`<TelephoneField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="telephone"
      >
        FirstName*
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <div
          class="sc-bCwgka dcOhHZ"
        >
          <span
            class="sc-iwaifL gUBSfc"
          >
            +48
          </span>
        </div>
        <input
          class="sc-fnVYJo kWrnkL"
          id="testId"
          label="FirstName"
          name="telephone"
          placeholder="Numer telefonu*"
          prefix="+48"
          required=""
          style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
          type="tel"
          value=""
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<TelephoneField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="telephone"
      >
        Telephone
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <div
          class="sc-bCwgka dEyIxQ"
        >
          <span
            class="sc-iwaifL gUBSfc"
          >
            +48
          </span>
        </div>
        <input
          class="sc-fnVYJo gOUwpW"
          id="testId"
          label="Telephone"
          name="telephone"
          placeholder="Numer telefonu"
          prefix="+48"
          style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
          type="tel"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
